--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  a
-  
-  <script src="./src/script.js"></script>
+  <div id="app"></div>
+  <script src="./main.js"></script>
 </body>
 </html>
